修改加解密方法